Debut de l'implementation de la nomination

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -286,7 +286,7 @@ ul.top-menu > li > .logout {
 
 #sidebar {
     /*width: 210px;*/
-    width: 300px;
+    /*width: 300px;*/
     height: 100%;
     position: fixed;
 /*     background: #2f323a; */
