--- a/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
+++ b/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
@@ -27,17 +27,57 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title">Voulez-vous enregistrer un nouvel agent avec les données suivantes ?</h4>
+							<h4 class="modal-title">Voulez-vous enregistrer un nouvel agent avec les informations suivantes ?</h4>
 						</div>
 						<div class="modal-body">
-							
 							<div class="list-group">
-								<a href="#" class="list-group-item active">Item 1 
+								<li class="list-group-item">Nom 
+									<span class="badge" id="confirmNom">Badge</span>
+								</li>
+								<li class="list-group-item">Prénom 
+									<span class="badge" id="confirmPrenom">Badge</span>
+								</li>
 								
-								</a>
-								<a href="#" class="list-group-item">Item 2 <span class="badge">Badge</span></a>
-								<a href="#" class="list-group-item">Item 3</a>
+								<li class="list-group-item">Sexe 
+									<span class="badge" id="confirmSexe">Badge</span>
+								</li>
+								
+								<li class="list-group-item">Date de naissance 
+									<span class="badge" id="confirmDateNaissance">Badge</span>
+								</li>
+
+								<li  class="list-group-item">Lieu de naissance 
+									<span class="badge" id="confirmLieuNaissance">Badge</span>
+								</li>
+
+								<li class="list-group-item">Email 
+									<span class="badge" id="confirmEmail">Badge</span>
+								</li>
+								
+
+								
+								
+								<!-- 				====================================================================				--- -->
+								
+								
+								<li class="list-group-item">Téléphone <span class="badge" id="confirmTel">Badge</span></li>
+								<li  class="list-group-item">Type de Pièce <span class="badge" id="confirmTypePiece">Badge</span></li>
+								<li  class="list-group-item">N° de pièce <span class="badge" id="confirmNumPiece">Badge</span></li>
+
+								<li class="list-group-item">Nom du père <span class="badge" id="confirmNomPere">Badge</span></li>
+								<li class="list-group-item">Nom de la mère <span class="badge" id="confirmNomMere">Badge</span></li>
+								
+								
+								<li class="list-group-item">Fixe de bureau <span class="badge" id="confirmFixeBureau">Badge</span></li>
+
+								<li class="list-group-item">Matricule <span class="badge" id="confirmMatricule">Badge</span></li>
+								<li class="list-group-item">Fonction <span class="badge" id="confirmFonction">Badge</span></li>
+								<li class="list-group-item">Emploi <span class="badge" id="confirmEmploi">Badge</span></li>
+								<li class="list-group-item">Grade <span class="badge" id="confirmGrade">Badge</span></li>
+								<li class="list-group-item">Première prise de service <span class="badge" id="confirmDatePriseService1">Badge</span></li>																
+															
 							</div>
+							
 							
 						</div>
 						<div class="modal-footer">
