--- a/src/main/resources/templates/user/infos-personnelles-frag.html
+++ b/src/main/resources/templates/user/infos-personnelles-frag.html
@@ -8,8 +8,8 @@
 <body>
 
 	<th:block th:fragment="infos-personnelles-frag">
-			    	<div id = "infos" class="panel-body">
-			    		<div class="col col-lg-12">
+			    	
+			    		<div class="col-lg-12">
 					    	<div class="panel orange-panel">
 					    		<div class="panel-heading">
 					    			<h3 class="panel-title"><a href="#infos-personnelles" data-toggle="collapse">Informations personnelles</a></h3>
@@ -25,7 +25,7 @@
 					    		</div>
 					    	</div>
 					    </div>
-			    	</div>		    			
+			    		    			
 	</th:block>
 
 </body>
