--- a/src/main/resources/templates/user/infos-professionnelles-frag.html
+++ b/src/main/resources/templates/user/infos-professionnelles-frag.html
@@ -8,8 +8,8 @@
 <body>
 
 	<th:block th:fragment="infos-professionnelles-frag">
-			    	<div id = "infos" class="panel-body">
-					    <div class="col col-lg-12">
+			    	
+					    <div class="col-lg-12" id = "infos">
 					    	<div  class="panel orange-panel">
 					    		<div class="panel-heading">
 					    			<h3 class="panel-title"><a href="#infos-professionnelles" data-toggle="collapse"> Informations professionnelles</a></h3>
@@ -25,7 +25,7 @@
 					    		</div>
 					    	</div>	
 					    </div>
-			    	</div>		    			
+			    		    			
 	</th:block>
 
 </body>
