--- a/src/main/resources/templates/fragments/layout/layout.html
+++ b/src/main/resources/templates/fragments/layout/layout.html
@@ -29,7 +29,7 @@
                 <section class="wrapper site-min-height">
                     
                     <div class="row mt" style="margin-left: 90px;">
-                        <div class="col-lg-12" layout:fragment="content">
+                        <div layout:fragment="content" style="padding: 0px;">
                         	<th:block th:if="${!#request.userPrincipal.principal.agent.active}">
                                 
                                 <div class="jumbotron">
