--- a/src/main/resources/templates/nomination-promotion/frm-nomination-unite-admin-frag.html
+++ b/src/main/resources/templates/nomination-promotion/frm-nomination-unite-admin-frag.html
@@ -2,13 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head><meta charset="UTF-8"/></head>
     <body>
-		<th:block th:fragment="frm-nomination-frag">
+		<th:block th:fragment="frm-nomination-unite-admin-frag">
             <form id="frm-unite-admin" th:object="${nomination}" th:action="@{/staffadmin/saf/nomination/save}" method="post" enctype="multipart/form-data">
 				<div class="col col-lg-8">
+                    <div class="form-group ">
+                        <label for="titre">Matricule de l'agent</label>
+                        <input required="required" th:field="*{agentNomme.matricule}" type="text" class="form-control" id="matricule" placeholder="Matricule">
+                    </div>
+
                     <div class="form-group ">
                         <label for="titre">Titre</label>
                         <input required="required" th:field="*{titreNomination}" type="text" class="form-control" id="titre" placeholder="Titre">
                     </div>
+
+
                                     
                     <div class="form-group">
                         <label for="dateNomination">Date de nomination</label>
@@ -16,11 +23,12 @@
                     </div>                                    
                 </div>
 
-         		<div class="col col-lg-4" th:if="${agentANommer}">
-	         		<p class="centered"><img th:src="${agentANommer.nomPhoto}" class="img-circle" height="80" width="80"></p>
-	              	<h5 class="centered"><span th:text="${agentANommer.nom + ' ' + agentANommer.prenom + ' - ' + agentANommer.matricule}"></span></h5>
-	              	<input type="hidden" th:field="*{agentNomme.idAgent}" th:value="${agentANommer.idAgent}">
-                </div>                                    
+                <div class="col col-lg-4">
+                    <p class="centered"><img src="#" id="photo" class="img-circle" height="80" width="80"></p>
+                    <h5 class="centered"><span id="agentInfos"></span></h5>
+                    
+               </div> 
+                                  
 
 				<div class="col col-lg-8">
                     <div class="form-group">
@@ -35,23 +43,21 @@
 				<div class="col col-lg-8">               
                     <div class="form-group">
                         <label for="idUniteAdminDeNomination">Unité administrative</label>
-                        <select required="required" th:field="*{uniteAdminDeNomination.idUniteAdmin}" class="form-control" id="idUniteAdminDeNomination" style="width: 100%;">
-                            <option value="0"></option>
-<!--                        <option th:each="ua:${unitesAdmins}" th:value="${ua.idUniteAdmin}" th:text="${ua.toString}"></option> -->
-                        </select>
+                        <input disabled  th:value="${nomination.uniteAdminDeNomination.appellation + ' (' + nomination.uniteAdminDeNomination.sigle + ')'}" class="form-control"/>
+                        <input   th:field="*{uniteAdminDeNomination.idUniteAdmin}"  id="idUniteAdminDeNomination"/>
                     </div>
                 </div>
                                                
                 <div class="col col-lg-12">
                     <div class="form-group">
                         <label for="acteNominationFile">Acte de nomination</label>
-                        <input th:field="*{acteNominationFile}"  type="file" class="form-control-file" id="acteNominationFile">
+                        <input required th:field="*{acteNominationFile}"  type="file" class="form-control-file" id="acteNominationFile">
                     </div>
                 </div>   
                 
                 <div class="col col-lg-offset-8 col-lg-4">
-	                <button class="btn btn-default pull-right" type="reset">Annuler</button> 
-	                <button class="btn green-btn pull-right" type="submit">Enregistrer</button>    
+                    <button id="btnEnregistrer" class="btn green-btn pull-right" style="margin: 5px;" type="submit">Enregistrer</button>
+	                <button class="btn btn-default pull-right" style="margin: 5px;" type="reset">Annuler</button> 	                    
 	           </div>  
             </form>
       	</th:block>
