--- a/src/main/resources/templates/unite-admin/single/list-personnel-frag__.html
+++ b/src/main/resources/templates/unite-admin/single/list-personnel-frag__.html
@@ -7,14 +7,13 @@
 
 <body>
 
-	<th:block th:fragment="docs-admins-frag">
-			    		
-                        <div class="col-lg-12">
+	<th:block th:fragment="infos-professionnelles-frag">
+					    <div class="col-lg-12" id = "infos">
 					    	<div  class="panel orange-panel">
 					    		<div class="panel-heading">
-					    			<h3 class="panel-title"><a href="#docs-admins" data-toggle="collapse">Documents administratifs</a></h3>
+					    			<h3 class="panel-title"><a href="#infos-professionnelles" data-toggle="collapse"> Informations professionnelles</a></h3>
 					    		</div>	
-					    		<div class="list-group panel-collapse collapse" id="docs-admins" >			    	
+					    		<div class="list-group panel-collapse collapse" id="infos-professionnelles" >			    	
 						    		<li class="list-group-item"> Ministère : <span class="badge" th:text="${visitedUser.agent.fixeBureau}"></span></li>
 						    		<li class="list-group-item"> Structure : <span class="badge" th:text="${visitedUser.agent.matricule}"></span></li>
 						    		<li class="list-group-item"> Fonction : <span class="badge" th:text="${visitedUser.agent.sexe}"></span></li>
@@ -24,7 +23,8 @@
 						    		<li class="list-group-item"> Type d'abonné : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
 					    		</div>
 					    	</div>	
-					    </div>	
+					    </div>
+			    		    			
 	</th:block>
 
 </body>
