--- a/src/main/resources/templates/user/situation-conges-frag.html
+++ b/src/main/resources/templates/user/situation-conges-frag.html
@@ -8,9 +8,7 @@
 <body>
 
 	<th:block th:fragment="situation-conges-frag">
-			    	<div id = "infos" class="panel-body">
-			    		
-					    <div class="col col-lg-12">
+					    <div class="col-lg-12">
 					    	<div  class="panel orange-panel">
 					    		<div class="panel-heading">
 					    			<h3 class="panel-title"><a href="#situation-conges" data-toggle="collapse"> Situation congés</a></h3>
@@ -25,8 +23,7 @@
 						    		<li class="list-group-item"> Type d'abonné : <span class="badge" th:text="${visitedUser.agent.numPiece}"></span></li>
 					    		</div>
 					    	</div>	
-					    </div>
-			    	</div>		    			
+					    </div>	    			
 	</th:block>
 
 </body>
